--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,7 @@
 
   </div>
 </div>
-<!-- {% for post in posts %}
+{% for post in posts %}
 <div class="col-xs-12 col-sm-4 col-md-8 col-lg-12">
   <div class="card p-2">
     <div class="image">
@@ -52,6 +52,6 @@
       </div>
   </div>
 
-{% endfor %} {% endblock content %} -->
+{% endfor %} {% endblock content %}
 
 
