--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,7 +45,8 @@
 </ul>  
 </div>
 </div>
-<!-- {% for post in posts %}
+<div class="container">
+  {% for post in posts %}
 <div class="col-xs-12 col-sm-4 col-md-8 col-lg-12">
   <div class="card p-2">
     <div class="image">
@@ -53,7 +54,7 @@
           <img src="{{ url_for('static', filename='featured_images/')}}{{post.image}}" />
       </a>
     </div>
-      <div class="card-content">
+      <!-- <div class="card-content">
           <h4 class="card-title">
             {{post.title}}
             
@@ -62,9 +63,12 @@
             {{post.content}}
             {% include 'stars.html' %}
           </p>
-      </div>
+      </div> -->
+      <button class="btn btn-outline-secondary btn-small" type="button"><a href="{{ url_for('ratings.post', post_id=post.id) }}">Rate</a></button>
   </div>
 
-{% endfor %} {% endblock content %}
+{% endfor %}
+</div>
+{% endblock content %}
 
 
